--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 sync build/ s3://aws-summit-2019-personalize-frontend"
+    "deploy": "npm run build && aws s3 sync build/ s3://aws-summit-2019-personalize-frontend"
   },
   "eslintConfig": {
     "extends": "react-app"
