--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "^4.3.3",
     "grommet": "^2.7.1",
     "grommet-icons": "^4.2.0",
+    "moment": "2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
