--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.3",
-    "@types/styled-components": "^4.1.16",
+    "@types/styled-components": "4.1.16",
     "grommet": "^2.7.1",
     "grommet-icons": "^4.2.0",
     "moment": "2.24.0",
